--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,19 +11,9 @@
 					<ul>
 						<li><a href="/news.html">News</a></li>
             <li><a href="/people.html">People</a></li>
-						<li><a href="/conferences.html">Conferences</a></li>
-						<li class="submenu"><a href="/publications.html">Publications</a>
-							<ul>
-								<li><a href="/journal-articles.html">Journal Articles</a></li>
-								<li><a href="/books.html">Books</a></li>
-								<li><a href="/book-chapters.html">Book Chapters</a></li>
-								<li><a href="/commentaries.html">Commentaries</a></li>
-								<li><a href="/conf-articles.html">Conference Articles</a></li>
-								<li><a href="/volumes.html">Edited Volumes</a></li>
-								<li><a href="/media.html">Media</a></li>
-							</ul>
-						</li>
-						<li><a href="/network.html" class="button special">Network</a></li>
+						<li><a href="/conferences.html">Projects</a></li>
+						<li><a href="/publications.html">Publications</a></li>
+						<li><a href="/network.html">Network</a></li>
 					</ul>
 				</nav>
 			</header>
