website content update
Added the news archive, projects descriptions from the old site, made minor improvements to site layout.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,12 +3,12 @@
 
     <ul class="icons">
         <li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
-        <li><a href="#" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
-        <li><a href="#" class="icon circle fa-github"><span class="label">Github</span></a></li>
+        <li><a href="https://www.facebook.com/consciousnesslab/" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
+        <li><a href="https://github.com/c-labpl" class="icon circle fa-github"><span class="label">Github</span></a></li>
     </ul>
 
     <ul class="copyright">
         <li>2018 &copy; C-Lab</li><li>Design: Marcin Koculak</li><li>Based on <a href="https://html5up.net/uploads/demos/twenty/">Twenty</a> template.</li>
     </ul>
-    
+
 </footer>
