--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
 					<ul>
 						<li><a href="/news.html">News</a></li>
             <li><a href="/people.html">People</a></li>
-						<li><a href="/conferences.html">Projects</a></li>
+						<li><a href="/projects.html">Projects</a></li>
 						<li><a href="/publications.html">Publications</a></li>
 						<li><a href="/network.html">Network</a></li>
 					</ul>
