add project description

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <footer id="footer">
 
     <ul class="icons">
-        <li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
+        <li><a href="https://twitter.com/C_LAB_UJ" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
         <li><a href="https://www.facebook.com/consciousnesslab/" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
         <li><a href="https://github.com/c-labpl" class="icon circle fa-github"><span class="label">Github</span></a></li>
     </ul>
