update, bug fixes
Updated with sites. Fixed mobile display bugs.

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -110,27 +110,32 @@
 		}
 
 		.wrapper.style2 {
-			background-size: 10em;
+			background-size: cover;
 			padding: 2.25em 1.5em;
 		}
 
 		.wrapper.style4 {
-			background-size: 10em;
+			background-size: cover;
 			padding: 1.5em 1.5em 3em 1.5em;
 		}
 
 /* Banner */
 
 	#banner {
-		background-size: 10em, 10em, auto, cover;
-		padding: 6em 0;
+		background-size: cover;
+		padding: 1em 0;
 	}
 
 		#banner .inner {
-			background: none;
+			/*background: none;*/
 			display: block;
+			margin: 2em 0;
 			padding: 0 1.5em;
 		}
+
+			#banner .inner .logo {
+				margin: 3em 0 0 0;
+			}
 
 			#banner .inner header h2 {
 				font-size: 1.5em;
@@ -144,10 +149,14 @@
 				display: none;
 			}
 
+			#banner .inner footer {
+				margin: 0 0 3em 0;
+			}
+
 /* Main */
 
 	#main {
-		background-size: 10em;
+		background-size: cover;
 		padding: 3.5em 0 2.5em 0;
 	}
 
@@ -162,7 +171,7 @@
 /* CTA */
 
 	#cta {
-		background-size: 10em, 10em, auto, cover;
+		background-size: cover;
 		padding: 3em 1.5em;
 	}
 
