footer and consortium update

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,14 @@
-<meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
-<html>
-<head>
-</head>
-<body>
-<ul class="icons">
-<li><a href="UrlBlockedError.aspx" class="icon circle fa fa-twitter" target="_blank"><span class="label">Twitter</span></a>
-</li><li><a href="UrlBlockedError.aspx" class="icon circle fa fa-facebook" target="_blank"><span class="label">Facebook</span></a>
-</li><li><a href="redir.aspx?C=4B2wcXxtcj5FaJrz-GDMcUQu8TPsLEnDhoL7cAbPf3pL57Byl7XVCA..&amp;URL=https%3a%2f%2fgithub.com%2fskuldnet" class="icon circle fa fa-github" target="_blank"><span class="label">Github</span></a>
-</li></ul>
-<ul class="copyright">
-<li>2018 &copy; SkuldNet</li><li>Design: Marcin Koculak</li><li>Based on <a href="redir.aspx?C=0PtO1uRvCyE-dKbV6FEGHk7uEaDG20FEUXCJGezm-wtL57Byl7XVCA..&amp;URL=https%3a%2f%2fhtml5up.net%2fuploads%2fdemos%2ftwenty%2f" target="_blank">
-Twenty</a> template. </li></ul>
-</body>
-</html>
+<!-- Footer -->
+<footer id="footer">
+
+    <ul class="icons">
+        <li><a href="" class="icon circle fa fa-twitter"><span class="label">Twitter</span></a></li>
+        <li><a href="" class="icon circle fa fa-facebook"><span class="label">Facebook</span></a></li>
+        <li><a href="https://github.com/skuldnet" class="icon circle fa fa-github"><span class="label">Github</span></a></li>
+    </ul>
+
+    <ul class="copyright">
+        <li>2018 &copy; SkuldNet</li><li>Design: Marcin Koculak</li><li>Based on <a href="https://html5up.net/uploads/demos/twenty/">Twenty</a> template.</li>
+    </ul>
+
+</footer>
