--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,13 +5,14 @@ layout: default
     <article id="main">
   <header class="special container">
     <h2 class="post-title">{{ page.title }}</h2>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+    <!--<p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>-->
+    <p class="post-meta">{{ page.location }}</p>
   </header>
 
   <section class="style4 wrapper container">
     {{ content }}
   </section>
-    
+
     <footer>
         {% if page.previous %}
         <a href="{{ page.previous.url }}" class="post-prev">&larr; Previous post</a> {% endif %}
@@ -19,4 +20,3 @@ layout: default
         <a href="{{ page.next.url }}" class="post-next">Next post &rarr;</a> {% endif %}
     </footer>
 </article>
-
