--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,7 @@
             <li><a href="/about.html">About</a></li>
 						<li><a href="/consortium.html">Consortium</a></li>
 						<li><a href="/news.html">News</a></li>
+						<li><a href="/faq.html">FAQ</a></li>
 						<li><a href="/contact.html">Contact</a></li>
 					</ul>
 				</nav>
