--- a/css/style.css
+++ b/css/style.css
@@ -1514,12 +1514,58 @@ h2.people.lab {
 
 .newslink {
   color: rgba(41, 49, 50, 1);
+  border-bottom: none;
+}
+
+.newslink p {
+  margin-top: 1em;
 }
 
 .newstitle{
   font-weight: 400;
   color: rgba(45, 114, 143, 1);
+  margin: 0.25em 0 0 0;
+  line-height: 1em;
 }
+
+.newsdate {
+  margin-bottom: 1em;
+  font-size: 0.8em;
+
+}
+
+/* FAQ */
+
+.faqtitle {
+  border: 1px dashed darkgrey;
+  padding: 0.75em;
+  font-weight: 600;
+  color: rgba(41, 49, 50, 1);
+  margin: 0.25em 0 0 0;
+  line-height: 1em;
+}
+
+.question div {
+  padding-top: 0 !important;
+}
+
+.answer {
+  visibility: hidden;
+  transition: all 0.5s ease;
+  opacity: 0;
+  max-height: 0;
+  margin-top: 1em;
+  padding: 0 1em 0 1em;
+}
+
+.answer:target {
+  visibility: visible;
+  opacity: 1;
+  max-height: 800px;
+  transition: max-height 0.5 ease-in;
+  transition: max-height 0.25 ease-out;
+}
+
 
 /* PROJECTS */
 
